# supermarkets

./: .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt
scripts/: calc_distances.py  kiel_de.sh  portland_or.sh
sql/: residences.sql  supermarkets.sql  sw_portland.sql  sw_portland_data_prep.sql  sw_portland_supermarkets.sql  sw_portland_supermarkets_single.sql
