[tool.poetry]
name = "supermarkets"
version = "0.1.0"
description = "An analysis of supermarket availability in several cities."
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
